<project>
  <parent>
    <groupId>io.teknek.deliverance</groupId>
    <artifactId>deliverance-parent</artifactId>
    <version>0.0.4-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>web</artifactId>
  <name>web</name>
  <properties>
    <!--
    <maven.compiler.source>24</maven.compiler.source>
    <maven.compiler.target>24</maven.compiler.target>
    <maven.compiler.release>24</maven.compiler.release>
    -->
    <build.plugins.plugin.version>3.5.3</build.plugins.plugin.version>
    <guava.version>32.0.1-jre</guava.version>
    <jackson.version>2.14.0</jackson.version>

    <jafama.version>2.3.2</jafama.version>
    <jcttools.version>4.0.1</jcttools.version>

    <metrics.version>4.2.37</metrics.version>
    <spring-boot.version>3.5.5</spring-boot.version>
    <springdoc-starter.version>2.8.12</springdoc-starter.version>
    <jersey-version>3.0.4</jersey-version>
    <annotation.version>6.0.53</annotation.version>
    <openapi.generator.version>7.16.0</openapi.generator.version>
    <spring-boot.run.jvmArguments>--add-modules jdk.incubator.vector</spring-boot.run.jvmArguments>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <type>pom</type>
        <version>${spring-boot.version}</version>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>core</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>io.teknek.deliverance</groupId>
      <artifactId>native</artifactId>
      <version>${project.version}</version>
      <classifier>${os.detected.name}-x86_64</classifier>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    <dependency>
      <groupId>io.dropwizard.metrics</groupId>
      <artifactId>metrics-core</artifactId>
      <version>${metrics.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency> <!-- necessary for Java 9+ -->
      <groupId>org.apache.tomcat</groupId>
      <artifactId>annotations-api</artifactId>
      <version>${annotation.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-tomcat</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-undertow</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>

    <!-- HTTP client: jersey-client -->
    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-client</artifactId>
      <version>${jersey-version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.connectors</groupId>
      <artifactId>jersey-apache-connector</artifactId>
      <version>${jersey-version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
      <version>${jersey-version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-multipart</artifactId>
      <version>${jersey-version}</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>${jersey-version}</version>
    </dependency>
    <dependency>
      <groupId>jakarta.annotation</groupId>
      <artifactId>jakarta.annotation-api</artifactId>
      <version>2.1.1</version>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>6.1.0</version>
      <scope>provided</scope>
    </dependency>

    <!--
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.15.2</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>25</release>
          <jdkToolchain>
            <version>25</version>
          </jdkToolchain>
          <compilerArgs>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>
            --add-opens java.base/java.nio=ALL-UNNAMED
            --add-modules jdk.incubator.vector
            -Djdk.attach.allowAttachSelf=true

          </argLine>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>${openapi.generator.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/deliverance_spec.yaml</inputSpec>
              <generatorName>java</generatorName>
              <library>jersey3</library>
              <skipValidateSpec>true</skipValidateSpec>
              <generateApis>false</generateApis>
              <generateSupportingFiles>true</generateSupportingFiles>
              <generateModelTests>false</generateModelTests>
              <apiPackage>io.teknek.deliverance.api</apiPackage>
              <modelPackage>io.teknek.deliverance.model</modelPackage>
              <output>${project.build.directory}/generated-sources/openapi</output>
              <configOptions>
                <useTags>true</useTags>
                <useBeanValidation>false</useBeanValidation>
                <hideGenerationTimestamp>true</hideGenerationTimestamp>
                <performBeanValidation>false</performBeanValidation>
                <useJakartaEe>true</useJakartaEe>
                <useOneOfDiscriminatorLookup>true</useOneOfDiscriminatorLookup>
                <openApiNullable>false</openApiNullable>
                <useOptional>true</useOptional>
                <containerDefaultToNull>true</containerDefaultToNull>
                <serializationLibrary>jackson</serializationLibrary>
                <generateAliasAsModel>true</generateAliasAsModel>
                <interfaceOnly>true</interfaceOnly>
                <generateBuilders>true</generateBuilders>
                <skipDefaultInterface>true</skipDefaultInterface>
                <documentationProvider>none</documentationProvider>
                <sourceFolder>java/main</sourceFolder>
              </configOptions>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                <execution>
                    <goals>
                        <goal>repackage</goal>
                    </goals>
                </execution>
            </executions>
      </plugin>

    </plugins>
  </build>
</project>  
